# jira-hub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/jira_hub/: __init__.py  cli.py  git_utils.py  jira_client.py  pr_formatter.py
